# agentic-beast

./: .gitignore  AUTONOMOUS_AGENTS_IMPLEMENTATION_PLAN.md  CHAT_E2E_TESTING_QUICK_START.md  CHAT_E2E_TEST_PLAN.md  CLAUDE.md  COMPLEX_QUERY_TEST_RESULTS.md  DATA_DEDUPLICATION_SPEC.md  DATA_DEDUPLICATION_TASKS.md  ENHANCEMENT_RECOMMENDATIONS.md  EXACT_FILE_CHANGES_GMAIL_REFACTORING.md  FILE_INVENTORY.md  GMAIL_CREDENTIAL_TESTING.md  IMPLEMENTATION_PLAN_GMAIL_REFACTORING.md  IMPLEMENTATION_REVIEW.md  INDEX_GMAIL_REFACTORING.md  INFRASTRUCTURE_SETUP_GUIDE.md  LOCAL_LLM_QUICK_START.md  LOCAL_LLM_SETUP.md  NOTIFICATION.md  PHASE_2_COMPLETION.md  QUICK_REFERENCE_GMAIL_REFACTORING.md  README_GMAIL_REFACTORING.md  REVISION_SUMMARY.md  ROADMAP_GMAIL_REFACTORING.md  SESSION_10_SUMMARY.md  SESSION_11_SUMMARY.md  SESSION_6_IMPLEMENTATION_SUMMARY.md  VISUAL_ARCHITECTURE_GMAIL_REFACTORING.md  docker-compose.yml  mermaid-v1.md  mermaid-v2.md  mermaid-v3.md  mermaid-v4.md  plan-v2.md  plan-v3.md  plan.md  readMe.md  scrap-tansa.js  test_chat_e2e.py  test_chat_e2e_complex.py
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  verify_api.py  verify_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_ingestion_module.py  003_phase2_tables.py  004_article_vectors_soft_delete.py  005_add_s3_url_to_documents.py  010_add_history_tracking.py  011_create_time_of_day_metrics.py  012_create_processed_emails.py  013_add_identifier_columns_to_documents.py  014_add_metric_deltas_to_documents.py  015_add_test_config_to_ingestion_tasks.py  016_add_identifier_column_to_schema_mapping.py  017_create_cron_test_runs_table.py  018_add_gmail_credential_tracking.py  019_add_deduplication_tracking.py  020_add_dedup_config_to_schema_mappings.py  021_add_published_time_to_documents.py  022_create_failed_email_queue.py  023_extend_email_tracking.py  024_add_parent_run_id_to_task_runs.py  025_add_connection_strategy_identifier_column.py  026_add_connection_identifier_hash_to_documents.py  027_remove_unique_constraint_sheet_row_number.py  (+8 more)
backend/config/: agent_settings.yaml  intents.yaml  model_settings.yaml  schema_registry.yaml
backend/data/: tags.csv
backend/db/: init.sql
backend/docs/: article-scraper-guide.md  cms-api-contract.md  cms-webhook-integration.md  google-cse-setup.md
backend/scripts/: debug_analytics.py  download_model.py  e2e_followup_validator.py  fix_platform_column.py  ingest_analytics.py  inspect_excel.py  print_gmail_preview.py  seed_analytics.py  seed_data.py  test_ollama_pipeline.py  test_tools.py  validate_phase2.py
backend/tests/: smoke_new_pipeline.py
(+323 files in other folders)
